# TapeFlow

./: .gitignore  README.md
backend/: .env.example  package-lock.json  package.json  server.ts  tsconfig.json  types.ts
backend/adapters/: base.ts  binance.ts  index.ts
cpp-engine/: .gitignore  CMakeLists.txt  README.md
cpp-engine/include/: .gitkeep  order.hpp  orderbook.hpp  simulator.hpp  telemetry.hpp  websocket.hpp
cpp-engine/src/: main.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css
frontend/src/adapters/: MarketDataProvider.ts  index.ts
frontend/src/components/: AlgoSignals.tsx  DashboardLayout.tsx  ModeToggle.tsx  OrderBook.tsx  RealTimeClock.tsx  SymbolHeader.tsx  SymbolSelector.tsx  SymbolTab.tsx  TapeTable.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: utils.ts
frontend/src/services/: dataBuffer.ts  globalClock.ts
frontend/src/stores/: useMarketStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: calculations.ts  formatters.ts
